k8s/apps/satisfactory/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: satisfactory
  labels:
    kustomize.toolkit.fluxcd.io/prune: "true"
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
