k8s/apps/satisfactory/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: satisfactory
  namespace: satisfactory
spec:
  gatewayClassName: cilium
  listeners:
    - name: game
      protocol: UDP
      port: 7777
      allowedRoutes:
        kinds:
          - kind: UDPRoute
    - name: query
      protocol: UDP
      port: 15777
      allowedRoutes:
        kinds:
          - kind: UDPRoute
    - name: beacon
      protocol: UDP
      port: 15000
      allowedRoutes:
        kinds:
          - kind: UDPRoute
